Abbreviation captions in group rating tools

--- a/static/group-form.html
+++ b/static/group-form.html
@@ -15,19 +15,19 @@
   <br />
   <table id="group-results" class="table history">
     <tr class="mean">
-      <th>ŚM</th>
+      <th><abbr title="Średnia miejsc">ŚM</abbr></th>
       <td colspan="2" class="mean-place text-right"></td>
     </tr>
     <tr class="mean">
-      <th>ŚA</th>
+      <th><abbr title="Średnia arytmentyczna">ŚA</abbr></th>
       <td colspan="2" class="mean-arithmetic text-right"></td>
     </tr>
     <tr class="mean">
-      <th>ŚG</th>
+      <th><abbr title="Średnia geometryczna">ŚG</abbr></th>
       <td colspan="2" class="mean-geometric text-right"></td>
     </tr>
     <tr class="mean">
-      <th>ŚH</th>
+      <th><abbr title="Średnia harmoniczna">ŚH</abbr></th>
       <td colspan="2" class="mean-harmonic text-right"></td>
     </tr>
   </table>
@@ -45,10 +45,18 @@
       <tr>
         <th data-sort-method="number">M-ce</th>
         <th data-sort-method="none">Para</th>
-        <th data-sort-method="dotsep">ŚM</th>
-        <th data-sort-method="dotsep">ŚA</th>
-        <th data-sort-method="dotsep">ŚG</th>
-        <th data-sort-method="dotsep">ŚH</th>
+        <th data-sort-method="dotsep">
+          <abbr title="Średnia miejsc">ŚM</abbr>
+        </th>
+        <th data-sort-method="dotsep">
+          <abbr title="Średnia arytmetyczna">ŚA</abbr>
+        </th>
+        <th data-sort-method="dotsep">
+          <abbr title="Średnia geometryczna">ŚG</abbr>
+        </th>
+        <th data-sort-method="dotsep">
+          <abbr title="Średnia harmoniczna">ŚH</abbr>
+        </th>
       </tr>
     </thead>
     <tbody>
