Instructions on static groupo ranking page expanded

--- a/static/group-form.html
+++ b/static/group-form.html
@@ -1,6 +1,6 @@
 <div class="col-sm-4">
   <p>
-    Wpisz poniżej PZBS ID zawodników w parze/teamie.
+    Wpisz poniżej PZBS ID zawodników w parze/teamie, po jednym w każdej nowej linii.
   </p>
   <p>
     Dla niezrzeszonych, podaj 0.
