Fixing HTML resource path for group tools template

--- a/static/group-form.html
+++ b/static/group-form.html
@@ -63,9 +63,9 @@
     </tbody>
   </table>
 </div>
-<script src="res/jquery-2.2.4.min.js"></script>
-<link rel="stylesheet" href="res/fileinput.min.css" />
-<script src="res/fileinput.min.js"></script>
-<link rel="stylesheet" href="res/tablesort.css" />
-<script src="res/tablesort.min.js"></script>
-<script src="res/group-ranking.js"></script>
+<script src="_res/jquery-2.2.4.min.js"></script>
+<link rel="stylesheet" href="_res/fileinput.min.css" />
+<script src="_res/fileinput.min.js"></script>
+<link rel="stylesheet" href="_res/tablesort.css" />
+<script src="_res/tablesort.min.js"></script>
+<script src="_res/group-ranking.js"></script>
