--- a/static/group-intro.html
+++ b/static/group-intro.html
@@ -5,10 +5,10 @@
   W obliczeniach wykorzystywane jest najnowsze notowanie rankingu.
 </p>
 <p>
-  Zawodnicy spoza pierwszych 2000 miejsc w rankingu (w tym: niezrzeszeni) otrzymują na potrzeby obliczeń:
+  Zawodnicy spoza pierwszych 6000 miejsc w rankingu (w tym: niezrzeszeni) otrzymują na potrzeby obliczeń:
   <ul>
-    <li>miejsce nr 2500 w rankingu</li>
-    <li>liczbę punktów równą dwukrotności <abbr title="Współczynnik Klasyfikacyjny">WK</abbr>, ograniczoną z góry liczbą punktów zawodnika na miejscu 2000, a z dołu wartością 0.1</li>
+    <li>miejsce nr 7000 w rankingu</li>
+    <li>ranking równy 0.1</li>
   </ul>
 </p>
 <p>
