Updated method documentation

--- a/static/metoda.html
+++ b/static/metoda.html
@@ -24,7 +24,6 @@
 </ul>
 <h3>PM i MPM</h3>
 <ul>
-  <li>są ważne przez dziewięć lat</li>
   <li>każdy PM przeliczony jest na dodatkowe 200 punktów</li>
   <li>każdy MPM przeliczony jest na dodatkowe 500 punktów</li>
   <li>wszystkie zdobyte PM i MPM w całej karierze liczone są z wagą 10%</li>
@@ -37,7 +36,7 @@
   <li>po sześciu latach waga zdobytych punktów wynosi 40%</li>
   <li>po siedmiu latach waga zdobytych punktów wynosi 30%</li>
   <li>po ośmiu latach waga zdobytych punktów wynosi 20%</li>
-  <li>po dziewięciu latach waga zdobytych punktów wynosi 10%</li>
+  <li>po dziewięciu i więcej latach waga zdobytych punktów wynosi 10%</li>
 </ul>
 <p>
   Dla zwiększenia czytelności wynik podzielony jest przez 100.
